@@ -154,6 +154,12 @@ truth shop::DropItem(character* Customer, item* ForSale, int Amount)
       ADD_MESSAGE("\"Oh no! You need it far more than I!\"");
       return false;
     }
+    if(ForSale->WillExplodeSoon())
+    {
+      ADD_MESSAGE("\"Hey that %s is primed! Take it out! OUT, I SAY!\"", 
+		  ForSale->CHAR_NAME(UNARTICLED));
+      return false;
+    }
 
     if(!Price)
     {
